# myCode-cpp

0.camke_tmp/: CMakeLists.txt
0.camke_tmp/inc/: hello.h
0.camke_tmp/src/: CMakeLists.txt  hello.cpp
1.cpp_base/C++基础语法入门/: 数据类型.cpp
2.commucation_management_sysyent/: mailList.cpp
3.cpp_core_programming/: 3.C++核心编程.cpp  4.引用.cpp
4.WorkerManager/: CMakeLists.txt  main.cpp
4.WorkerManager/include/: WorkerManager.h  boss.h  employee.h  manager.h  worker.h
4.WorkerManager/src/: CMakeLists.txt  WorkerManager.cpp  employee.cpp  manager.cpp
4.employee_management_system/: Worker.h  workerManager.cpp  workerManager.h  职工管理系统.cpp
5.array/: CMakeLists.txt  main.cpp
5.array/inc/: MyArray.hpp
5.cpp_improve_programming/: CMakeLists.txt  main.cpp
5.cpp_improve_programming/inc/: person.hpp
5.cpp_improve_programming/src/: CMakeLists.txt  person.cpp
