CMAKE_MINIMUM_REQUIRED(VERSION 3.21)
PROJECT(camke_tmp)

SET(CMAKE_CXX_STANDARD 14)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/inc)

ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/src)  # 添加引用CMakeLists.txt的路径

ADD_EXECUTABLE(${PROJECT_NAME} main.cpp)  # 生成名为${PROJECT_NAME}的可执行文件，依赖main.cpp

TARGET_LINK_LIBRARIES(${PROJECT_NAME} HELLO)  # 将目标文件与HELLO库链接