cmake_minimum_required(VERSION 3.21)
project(5_C__)

set(CMAKE_CXX_STANDARD 14)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/inc ${PROJECT_SOURCE_DIR}/src)

#ADD_SUBDIRECTORY(src)

add_executable(5_C__ main.cpp)

#TARGET_LINK_LIBRARIES(5_C__ SRC)
#TARGET_INCLUDE_DIRECTORIES(5_C__ PUBLIC ${PROJECT_SOURCE_DIR}/inc)